--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="edit">edit</string>
     <string name="favourite">favourite</string>
     <string name="item_description_bookmark">item bookmarks</string>
+    <string name="no_bookmarks">No Bookmarks</string>
 </resources>
