can now edit items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,8 @@
     <string name="logout">Logout</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="edit_item">Edit Item</string>
+    <string name="choose_image">Choose Image</string>
+    <string name="item_description">Item Description</string>
+    <string name="delete_item">Delete Item</string>
 </resources>
