--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="choose_image">Choose Image</string>
     <string name="item_description">Item Description</string>
     <string name="delete_item">Delete Item</string>
+    <string name="upload_info">Uploaded by %1$s on %2$s</string>
 </resources>
