--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,5 @@
     <string name="delete_item">Delete Item</string>
     <string name="upload_info">Uploaded by %1$s on %2$s</string>
     <string name="create_blog_post">Create Blog Post</string>
+    <string name="view_pending">Pending</string>
 </resources>
