--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,5 +94,5 @@
     <string name="add_artefact_button">Add Artefact Button</string>
     <string name="bookmarked_on">Bookmarked on: %1$s</string>
     <string name="not_logged_in">Not logged in</string>
-
+    <string name="uploading_percentage">%1$d%%</string>
 </resources>
